# req-update-check

./: AI_ANALYSIS_PLAN.md  DEVELOPER.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml  release-please.yml  tests.yml
src/req_check/: __init__.py  cache.py  cli.py  core.py  logging_config.py
src/req_cheq/: cli.py  core.py  logging_config.py
src/req_update_check/: ai_analyzer.py  core.py  formatting.py
src/req_update_check/ai_providers/: base.py  claude.py  custom.py  gemini.py  openai.py
tests/: test_req_check.py  test_req_cheq.py
tests/test_ai_providers/: test_base.py
